--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve-favicon": "~2.5.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
